This is the final version of submission 1.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <header>
         <nav class="navbar" style="background-color: crimson;" role="navigation" aria-label="Main navigation">
             <div class="container">
-                <a class="navbar-brand" style="color: ghostwhite;" href="index.html">
+                <a class="navbar-brand" style="color: ghostwhite;" >
                     <img src="images/up-logo.png" alt="UPLogo" width="90" height="30" aria-hidden="true" class="d-inline-block align-text-top">  
                     Food Ordering Platform
                 </a>
@@ -27,11 +27,6 @@
                                 Log Out
                             </a>
                         </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="register.html">
-                                <i class="bi bi-person-plus me-1" aria-hidden="true"></i>Register
-                            </a>
-                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -59,16 +54,24 @@
 
                 <div class="d-grid">
                      <a href="vendor-main.html" class="btn btn-outline-primary btn-lg">
-                        <i class="bi bi-currency-dollar" aria-hidden="true"></i>
+                     <i class="bi bi-cup-straw" aria-hidden="true"></i>
                         Vendor
                     </a>
                 </div>
 
-                <p class="center fw-bold text-danger" Col> *** Please note that this page will not be in the final project. This page is only used 
-                    because there is no authentication system implemented yet. ***
-                </p>
+                <p class="spaced-paragraph"></p>
 
-                <div></div>
+                <div class="d-grid">
+                    <a href="vendor_admin.html" class="btn btn-lg btn-outline-primary btn-lg">
+                    <i class="bi bi-bank" aria-hidden="true"></i>
+                        Admin
+                    </a>
+
+                <p class="text-center fw-bold text-danger small">
+                    *** Please note that this page will not be in the final project.
+                    This page is only used because there is no authentication system implemented yet. ***</p>
+
+              
 
             </div>                  
         </section>    
