--- a/ABC_Classification.html
+++ b/ABC_Classification.html
@@ -7,76 +7,12 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
-    <style>
-
-
-        
-        /* body {
-            background-color: #e0e0e0; 
-        }
-
-        .container-fluid.figma-bg {
-            background-color: #e0e0e0; 
-            padding: 20px;
-            min-height: 100vh;
-        }
-        .figma-frame {
-            background-color: #ffffff; 
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-        }
-        .nav-bar-placeholder {
-            background-color: #f0f0f0;
-            border: 1px solid #ccc;
-            padding: 10px;
-            text-align: right;
-            margin-bottom: 20px;
-            font-size: 0.9em;
-            color: #666;
-        }
-        .abc-title {
-            font-size: 1.8em;
-            font-weight: bold;
-            color: #333;
-            margin-bottom: 20px;
-        } */
-        .time-filter .btn {
-            border-radius: 0;
-            margin-right: -1px; 
-        }
-        .time-filter .btn:first-child {
-            border-top-left-radius: .25rem;
-            border-bottom-left-radius: .25rem;
-        }
-        .time-filter .btn:last-child {
-            border-top-right-radius: .25rem;
-            border-bottom-right-radius: .25rem;
-        }
-        .metric-filter .btn {
-            border-radius: .25rem;
-            margin-right: 10px;
-        }
-        .chart-placeholder {
-            background-color: #f8f8f8;
-            border: 1px solid #ddd;
-            height: 250px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #999;
-            margin-bottom: 20px;
-        }
-        .table thead th {
-            background-color: #f0f0f0;
-        }
-    </style>
 </head>
 <body>
     <header>
         <nav class="navbar" style="background-color: crimson;"     role="navigation" aria-label="Main navigation">
             <div class="container">
-                <a class="navbar-brand" style="color: ghostwhite;" href="index.html">
+                <a class="navbar-brand" style="color: ghostwhite;">
                     <img src="images/up-logo.png" alt="UPLogo" width="90" height="30" aria-hidden="true" class="d-inline-block align-text-top">  
                     Food Ordering Platform
                 </a>
@@ -122,7 +58,7 @@
     <main>
         <header class="mb-4">
             <h1 class="h2">
-                <i class="bi me-2" aria-hidden="true"></i>
+                <i class="bi bi-card-text me-2" aria-hidden="true"></i>
                 ABC Classification
             </h1>
         </header>
@@ -136,16 +72,37 @@
                     </div>
 
                     <div class="d-flex justify-content-center mb-4 time-filter">
-                        <button type="button" class="btn btn-outline-secondary">Daily</button>
-                        <button type="button" class="btn btn-outline-secondary">Weekly</button>
-                        <button type="button" class="btn btn-outline-secondary">Monthly</button>
-                        <button type="button" class="btn btn-outline-secondary">Yearly</button>
+                        <input type="radio" class="btn-check" name="time-filter" id="daily" autocomplete="off" checked>
+                        <label class="btn btn-outline-secondary" for="daily" >
+                            Daily
+                        </label>
+                        <input type="radio" class="btn-check" name="time-filter" id="weekly" autocomplete="off">
+                        <label class="btn btn-outline-secondary" for="weekly" >
+                            Weekly
+                        </label>
+                        <input type="radio" class="btn-check" name="time-filter" id="monthly" autocomplete="off">
+                        <label class="btn btn-outline-secondary" for="monthly" >
+                            Monthly
+                        </label>
+                        <input type="radio" class="btn-check" name="time-filter" id="yearly" autocomplete="off">
+                        <label class="btn btn-outline-secondary" for="yearly" >
+                            Yearly
+                        </label>
                     </div>
 
                     <div class="d-flex justify-content-center mb-4 metric-filter">
-                        <button type="button" class="btn btn-outline-primary">#Orders</button>
-                        <button type="button" class="btn btn-outline-primary">Profit</button>
-                        <button type="button" class="btn btn-outline-primary">Cost</button>
+                        <input type="radio" class="btn-check" name="time-filter" id="Orders" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="Orders" >
+                            #Orders
+                        </label>
+                        <input type="radio" class="btn-check" name="time-filter" id="Profit" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="Profit" >
+                            Profit
+                        </label>
+                        <input type="radio" class="btn-check" name="time-filter" id="Cost" autocomplete="off">
+                        <label class="btn btn-outline-primary" for="Cost" >
+                            Cost
+                        </label>
                     </div>
 
                     <div class="chart-placeholder mb-4">
