--- a/Customer_cart.html
+++ b/Customer_cart.html
@@ -19,7 +19,7 @@
     <header>
         <nav class="navbar" style="background-color: crimson;"     role="navigation" aria-label="Main navigation">
             <div class="container">
-                <a class="navbar-brand" style="color: ghostwhite;" href="index.html">
+                <a class="navbar-brand" style="color: ghostwhite;">
                     <img src="images/up-logo.png" alt="UPLogo" width="90" height="30" aria-hidden="true" class="d-inline-block align-text-top">  
                     Food Ordering Platform
                 </a>
@@ -80,19 +80,33 @@
                 <td>Burger Meal</td>
                 <td>R120.00</td>
                 <!-- Code for remove option in every row -->
-                <td><button class="btn btn-danger btn-sm remove-btn">X</button></td>
+                <td>  <button class="btn btn-sm btn-outline-danger" data-bs-toggle="modal" data-bs-target="#removeModal-3">
+                                <i class="bi bi-trash" aria-hidden="true"></i>
+                                Remove
+                    </button>
+                </td>
             </tr>
         
+            <!-- Item 2 -->
             <tr>
                 <td>Large Chips</td>
                 <td>R50.00</td>
-                <td><button class="btn btn-danger btn-sm remove-btn">X</button></td>
+                <td>  <button class="btn btn-sm btn-outline-danger" data-bs-toggle="modal" data-bs-target="#removeModal-3">
+                                <i class="bi bi-trash" aria-hidden="true"></i>
+                                Remove
+                    </button>
+                </td>
             </tr>
 
+            <!-- Item 3 -->
             <tr>
                 <td>Milkshake</td>
                 <td>R70.00</td>
-                <td><button class="btn btn-danger btn-sm remove-btn">X</button></td>
+                <td>  <button class="btn btn-sm btn-outline-danger" data-bs-toggle="modal" data-bs-target="#removeModal-3">
+                                <i class="bi bi-trash" aria-hidden="true"></i>
+                                Remove
+                    </button>
+                </td>
             </tr>
             </tbody>
 
@@ -107,14 +121,17 @@
         </table>
         <!-- End of table -->
 
+
     <!-- Action Buttons -->
         <div class="row justify-content-center">
-            <a href="menu.html" class="btn btn-secondary mb-2" style="width: 170px; height: 60px; line-height: 40px;">
-                <i class="bi bi-arrow-right-circle" aria-hidden="true" style="text-align: center;"></i>
+            <a href="menu.html" class="btn btn-success" style="width: 170px; height: 60px; line-height: 40px;">
+                <i class="bi bi-plus-circle" aria-hidden="true" style="text-align: center;"></i>
                 Add to Order
             </a>
         </div>
         <p class="spaced-paragraph"></p>
+
+        <!-- Order and pay  -->
         <div class="row justify-content-center">
             <a href="confirm-pay.html" class="btn btn-primary" style="width: 170px; height: 60px; line-height: 40px;">
                 <i class="bi bi-credit-card-2-front" aria-hidden="true" style="text-align: center;"></i>
