--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
     <header class="mb-4">
         <nav class="navbar" style="background-color: crimson;" role="navigation" aria-label="Vendor navigation">
             <div class="container">
-                <a class="navbar-brand" style="color: ghostwhite;" href="index.html">
+                <a class="navbar-brand" style="color: ghostwhite;">
                     <img src="images/up-logo.png" alt="UPLogo" width="90" height="30" aria-hidden="true" class="d-inline-block align-text-top">  
                     Food Ordering Platform
                 </a>
@@ -43,7 +43,7 @@
 
     <main class="container vendor-page mt-4">
         <section class="vendor-info">
-            <h2 class="vendor-section-heading text-crimson">Tenz Express UP > Menu</h2>
+            <h2 class="vendor-section-heading text-crimson">Tenz Express UP Menu</h2>
             <p class="meta text-muted small">Pickup time slots available: 11:00 - 11:15, 11:30 - 11:45, 12:00 - 12:15</p>
         </section>
 
@@ -173,7 +173,7 @@
                     
                     <p class="card-text text-muted small">This is a demonstration of your order's progress.</p>
                     
-                    <div class="mt-3">
+                    <!-- <div class="mt-3">
                         <label for="status-selector" class="form-label">Simulate Status Change:</label>
                         <select id="status-selector" class="form-select w-auto">
                             <option value="25" data-text="Order Received" data-color="warning" selected>Order Received</option>
@@ -181,21 +181,20 @@
                             <option value="75" data-text="Ready for Collection" data-color="info">Ready for Collection</option>
                             <option value="100" data-text="Complete" data-color="success">Complete</option>
                         </select>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
         </section>
 
         <section class="mb-4" aria-labelledby="order-status-heading">
-            <h2 id="actions-heading" class="h3 mb-3">Active Orders</h2>
+            <h2 id="actions-heading" class="h3 mb-3 bi-clock-history"> Order History</h2>
             <div class="row custom-row">
                 <div class="col-md-12 mb-3">
                     <div class="card h-40" style="width: 100%; display: flex; flex-direction: row;">
                         <div class="card-body">
                             <h5 class="card-title">Order #001</h5>
-                            <p class="card-text">Status: (Insert order status here)</p>
-                            <p class="card-text">Estimated time: (Insert time here)</p>
+                            <p class="card-text">Date: (DD/MM/YYYY)</p>
                         </div>
                     </div>   
                 </div>  
@@ -203,7 +202,7 @@
             <p class="spaced-paragraph"></p>
             <div class="row">
                 <a href="Customer_cart.html" class="btn btn-success btn-lg" style="height: 70px; line-height: 50px;">
-                    <i class="bi bi-bag-check" aria-hidden="true" style="text-align: center;"></i>
+                    <i class="bi bi-cart3" aria-hidden="true" style="text-align: center;"></i>
                     View Cart
                 </a>
             </div>
