--- a/new_menu_item.html
+++ b/new_menu_item.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar" style="background-color: crimson;" role="navigation" aria-label="Main navigation">
             <div class="container">
-                <a class="navbar-brand" style="color: ghostwhite;" href="index.html">
+                <a class="navbar-brand" style="color: ghostwhite;" >
                     <img src="images/up-logo.png" alt="UPLogo" width="100" height="30" aria-hidden="true" class="d-inline-block align-text-top">
                     Food Ordering Platform
                 </a>
@@ -89,16 +89,11 @@
                 </div>
 
                 <div class="d-grid gap-2 mt-5">
-<<<<<<< HEAD
-                    <button type="submit" class="btn btn-lg crimson-bg">+ Add item</button>
-                    </div>
-=======
                     <a href="Vendor_Menu.html"  class="btn btn-lg text-white"  style="background-color: crimson;" aria-label="Add new vendor">
                         <i class="bi bi-check-circle-fill me-2" aria-hidden="true"></i>
                         Add Item
                     </a>
                 </div>
->>>>>>> b0228f8 (Refactor HTML files to include Bootstrap from CDN and enhance header styling; update button styles for consistency.)
 
             </form>
         </div>
